--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
     <div class="row justify-content-around align-items-center">
       <div class="col-lg-6">
         <p class="lead offset-1">
-          Hi!,I am Sayan Manna, an Undergraduate Sophomore at IIT Kharagpur. I have a deep interest in coding.
-          But I am not a pro. I am also interested in simulating physical phenomenons, machine learning, cryptography
-          and there are lot more.
-          I am very much curious about quantum world and the future "quantum computing".
+          Hi!,I am Sayan Manna, an undergraduate Sophomore at IIT Kharagpur. I am currently interested in quantum computing and quantum information.
 
         </p>
 
@@ -230,7 +227,7 @@
           <th scope="row">1</th>
           <td>Indian Institute of Technology, Kharagpur</td>
           <td>B.Tech + M.Tech Dual</td>
-          <td>9.11</td>
+          <td>9.23</td>
         </tr>
         <tr>
           <th scope="row">2</th>
